# AgenticAI

langgraph_learning/: 1_simple_graph.ipynb  2_graph_with_condition.ipynb  3_chatbot.ipynb  4_tool_call.ipynb  5_tool_call_agent.ipynb  7_langsmith.ipynb  8_HITL.ipynb  9_multAgentSystem.ipynb  pyproject.toml
multi-agent trading assistant/: .gitignore  README.md  agents.md  run-backend.ps1  run-frontend.ps1
multi-agent trading assistant/backend/: .env.example  requirements.txt
multi-agent trading assistant/backend/app/: __init__.py  agents.py  database.py  fundamentals_provider.py  graph.py  llm_provider.py  main.py  market_data_provider.py  models.py  sample_data.py  technical_indicators.py  web_search_provider.py
multi-agent trading assistant/backend/tests/: conftest.py  test_agents.py  test_api.py  test_llm_provider.py  test_market_data_provider.py  test_technical_indicators.py  test_web_search_provider.py
multi-agent trading assistant/frontend/: next.config.mjs  package-lock.json  package.json
multi-agent trading assistant/frontend/app/: layout.tsx  page.tsx  styles.css
